objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Back_Of_Check_Content_ID__c</fullName>
        <label>Back Of Check Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Of_Check_URL__c</fullName>
        <formula>IF(ISBLANK(Back_Of_Check_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Back_Of_Check_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Of Check URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Of_Check_Content_ID__c</fullName>
        <label>Front Of Check Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Of_Check_URL__c</fullName>
        <formula>IF(ISBLANK(Front_Of_Check_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Front_Of_Check_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Front Of Check URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cashier&apos;s Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - AutoFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Autopay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Earnest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - First Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Non Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Order_ID__c</fullName>
        <label>Vehicle Order</label>
        <referenceTo>Vehicle_Order__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>